--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,14 +1,14 @@
-name: Build extensions
+name: Build Safari Extension
 on:
   push:
     branches:
-      - main
+      - main  # 只有推送到 main 分支时才会触发构建
+
 jobs:
   build:
-    name: notab
-    runs-on: macos-latest # Must be macos for Safari extension build
+    runs-on: macos-latest  # Safari 扩展必须在 macOS 上构建
     steps:
-
+      
       - name: 🛎 Checkout
         uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -22,10 +22,6 @@ jobs:
         # Default looks for file in workspace path bepp.config.json, bepp.config.yaml, bepp.config.toml
         # More info for config file: https:/bepp.pigeonposse.com/guide/lib/build/config-file
         ##########################################################################################
-
-    
-
-     - name: View builds
-       runs: ls -ls build/extensions # this is the default output for builds, you can change output folder in bepp config file.
-    
-     # Do something with builds..
+        # with:
+        #   file: './custom-bepp.config.json'
+ 
