--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,20 +8,11 @@ jobs:
   build:
     runs-on: macos-latest  # Safari 扩展必须在 macOS 上构建
     steps:
-      
-      - name: 🛎 Checkout
+      - name: 拉取代码
         uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
 
-      - name: Build extension with BEPP
-        uses: pigeonposse/bepp@v1
-        ##########################################################################################
-        # For custom config file input
-        # Default looks for file in workspace path bepp.config.json, bepp.config.yaml, bepp.config.toml
-        # More info for config file: https:/bepp.pigeonposse.com/guide/lib/build/config-file
-        ##########################################################################################
-        # with:
-        #   file: './custom-bepp.config.json'
- 
+      - name: 安装 Bepp
+        run: npm install -g @bepp/bepp
+
+      - name: 开始构建
+        run: bepp build
