--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,6 +13,9 @@ jobs:
 
       - name: 安装 Bepp
         run: npm install -g @bepp/bepp
-
+      - name: Bepp
+        run: npm uninstall nodejs
+      - name: bepp1
+        run: npm install nodejs
       - name: Build extension with BEPP
         uses: pigeonposse/bepp@v1
